# Client

./: .gitignore  Makefile  TODO  buffer.cpp  buffer.h  client.cpp  fake_tcp.cpp  fake_tcp.h  input.xml  main.cpp  parser.cpp  server.cpp  server.h  thread_pool.cpp  thread_pool.h  util.h
client_cmake/: CMakeLists.txt
client_cmake/src/: TODO  buffer.cpp  buffer.h  client.cpp  client.h  fake_tcp.cpp  fake_tcp.h  fake_tcp_states.cpp  job.cpp  job.h  joined_threads.cpp  joined_threads.h  main.cpp  parser.cpp  parser.h  thread_pool.cpp  thread_pool.h  util.h
client_visual_studio/: main.sln
client_visual_studio/Debug/: main.ilk
client_visual_studio/Debug/inputs/: input2.xml  input4.xml
client_visual_studio/inputs/: input3.xml  input5.xml
client_visual_studio/ipch/MAIN-6da54c6a/: MAIN-4f171531.ipch
client_visual_studio/main/: buffer.cpp  buffer.h  client.cpp  client.h  fake_tcp.cpp  fake_tcp.h  fake_tcp_states.cpp  job.cpp  job.h  joined_threads.cpp  joined_threads.h  main.cpp  main.vcxproj  main.vcxproj.filters  parser.cpp  parser.h  thread_pool.cpp  thread_pool.h  util.h
client_visual_studio/main/Debug/: main.pch  vc140.idb
client_visual_studio/main/Debug/main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  (+1 more)
inputs/: input4.xml
outputs/: INFO
src/: Makefile  buffer.cpp  buffer.h  client.cpp  client.h  fake_tcp.cpp  fake_tcp.h  fake_tcp_states.cpp  job.cpp  job.h  joined_threads.cpp  joined_threads.h  main.cpp  parser.cpp  parser.h  thread_pool.cpp  thread_pool.h  util.h
